2007-06-14  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/press/releases/index.wml:
	* www.gnome.org/press/releases/igaliajoins.wml:
	* www.gnome.org/press/releases/Makefile.am: add press release about
	Igalia joining the Advisory Board

2007-06-04  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/evolution/download.shtml: Fix latest
	Evolution stable versions.

2007-04-26  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/garnome/index.html: Downloads / versions
	updated for 2.19.x.

2007-04-19  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Add GMAE to news, and remove Google SoC.

2007-04-19  Elijah Newren  <newren gmail com>

	* www.gnome.org/start/index.wml:
	Update to mention GNOME 2.18 and 2.19 instead of 2.16 and 2.17

2007-04-19  Elijah Newren  <newren gmail com>

	* www.gnome.org/htaccess:
	redirect /start/unstable to the TwoPointNineteen wiki page

2007-04-19  Glynn Foster  <glynn.foster@sun.com>

	* www.gnome.org/press/releases/Makefile.am,
	* www.gnome.org/press/releases/canonicaljoins.wml,
	* www.gnome.org/press/releases/index.wml: Add canonical press
        release.

2007-04-06  Thomas Thurman  <thomas@thurman.org.uk>

        * include/evilsedhack: change link to CVS to point to subversion
	instead.

2007-03-31  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* www.gnome.org/Makefile.am:
	* www.gnome.org/bounties/:
	Removed the bounties pages, because they are no longer active 
	and are therefore misleading, after discussion on gnome-web-list .
	I cannot find any significant links to this in the rest of the website.

2007-03-28  Andre Klapper  <a9016009@gmx.de>

	* www.gnome.org/start/schedule-unstable.ics: update for 2.19.

2007-03-28  Harish Krishnaswamy <kharish@gnome.org>
	
	* www.gnome.org/projects/evolution/download.shtml:
	Update current release URLs.

2007-03-28  Harish Krishnaswamy <kharish@gnome.org>
	
	* www.gnome.org/projects/evolution/build.shtml: