@@ -23,7 +23,7 @@
  <a href="gpm.html">Notification Icon</a> &middot;
  <a href="gpp.html">Preferences</a> &middot;
  <a href="packages.html">Download</a> &middot;
- <a href="http://svn.gnome.org/svn/gnome-power-manager/trunk/docs/faq.html">FAQ</a> &middot;
+ <a href="http://live.gnome.org/GnomePowerManager/FAQ">FAQ</a> &middot;
  <a href="bugs.html"><b>Reporting Bugs</b></a> &middot;
  <a href="http://live.gnome.org/GnomePowerManager">Wiki</a>
  </div>
