@@ -23,7 +23,7 @@
  <a href="gpm.html">Notification Icon</a> &middot;
  <a href="gpp.html">Preferences</a> &middot;
  <a href="packages.html"><b>Download</b></a> &middot;
- <a href="http://svn.gnome.org/svn/gnome-power-manager/trunk/docs/faq.html">FAQ</a> &middot;
+ <a href="http://live.gnome.org/GnomePowerManager/FAQ">FAQ</a> &middot;
  <a href="bugs.html">Reporting Bugs</a> &middot;
  <a href="http://live.gnome.org/GnomePowerManager">Wiki</a>
  </div>
@@ -79,7 +79,7 @@ make install
   GNOME Bug Tracking System</a>.
  </p>
  <p>
-  Please read the <a href="http://svn.gnome.org/svn/gnome-power-manager/trunk/docs/faq.html">FAQ</a> and the 
+  Please read the <a href="http://live.gnome.org/GnomePowerManager/FAQ">FAQ</a> and the 
   <a href="bugs.html">bug reporting guidelines</a> before creating a new bug.
  </p>
  <p>
