@@ -1,3 +1,13 @@
+2007-06-14  Richard Hughes  <richard@hughsie.com>
+
+	* www.gnome.org/projects/gnome-power-manager/bugs.html:
+	* www.gnome.org/projects/gnome-power-manager/gpm.html:
+	* www.gnome.org/projects/gnome-power-manager/gpp.html:
+	* www.gnome.org/projects/gnome-power-manager/hal.html:
+	* www.gnome.org/projects/gnome-power-manager/index.html:
+	* www.gnome.org/projects/gnome-power-manager/packages.html:
+	Update the FAQ link to point to the wiki page.
+
 2007-06-14  Vincent Untz  <vuntz@gnome.org>
 
 	* www.gnome.org/press/releases/index.wml:
